# fpm-rust

./: Cargo.toml  flake.nix
src/: api.rs  graph.rs  jobs.rs  main.rs  prelude.rs  source.rs  try_hash.rs
src/fstar/: cli.rs  mod.rs  raw_deps.rs
